--- a/nvidia_gpu_operator.yaml
+++ b/nvidia_gpu_operator.yaml
@@ -562,7 +562,7 @@ spec:
               - ALL
             readOnlyRootFilesystem: true
             runAsNonRoot: true
-        image: "k8s.gcr.io/nfd/node-feature-discovery:v0.10.1" # Fix this
+        image: "k8s.gcr.io/nfd/node-feature-discovery:v0.10.1"
         imagePullPolicy: IfNotPresent
         env:
         - name: NODE_NAME
@@ -752,7 +752,7 @@ spec:
       priorityClassName: system-node-critical
       containers:
       - name: gpu-operator
-        image: nvcr.io/nvidia/gpu-operator:v1.10.0 # Fix this
+        image: nvcr.io/nvidia/gpu-operator:v1.10.0
         imagePullPolicy: IfNotPresent
         command: ["gpu-operator"]
         args:
@@ -824,7 +824,7 @@ spec:
     defaultRuntime: containerd
     runtimeClass: nvidia
     initContainer:
-      repository: nvcr.io/nvidia # Fix this
+      repository: nvcr.io/nvidia
       image: cuda
       version: "11.4.2-base-ubi8"
       imagePullPolicy: IfNotPresent
@@ -838,7 +838,7 @@ spec:
         effect: NoExecute
     priorityClassName: system-node-critical
   validator:
-    repository: nvcr.io/nvidia/cloud-native # Fix this
+    repository: nvcr.io/nvidia/cloud-native
     image: gpu-operator-validator
     version: "v1.10.0"
     imagePullPolicy: IfNotPresent
@@ -856,7 +856,7 @@ spec:
     enabled: false
   driver:
     enabled: false # We pre bake drivers, so install again.
-    repository: nvcr.io/nvidia # Fix this
+    repository: nvcr.io/nvidia
     image: driver
     version: "510.47.03"
     imagePullPolicy: IfNotPresent
@@ -864,7 +864,7 @@ spec:
       enabled: false
       useHostMofed: false
     manager:
-      repository: nvcr.io/nvidia/cloud-native # Fix this
+      repository: nvcr.io/nvidia/cloud-native
       image: k8s-driver-manager
       version: "v0.3.0"
       imagePullPolicy: IfNotPresent
@@ -896,7 +896,7 @@ spec:
         level: s0
   toolkit:
     enabled: true
-    repository: nvcr.io/nvidia/k8s # Fix this
+    repository: nvcr.io/nvidia/k8s
     image: container-toolkit
     version: "v1.9.0-ubuntu18.04"
     imagePullPolicy: IfNotPresent
@@ -905,7 +905,7 @@ spec:
       seLinuxOptions:
         level: s0
   devicePlugin:
-    repository: nvcr.io/nvidia # Fix this
+    repository: nvcr.io/nvidia
     image: k8s-device-plugin
     version: "v0.11.0-ubi8"
     imagePullPolicy: IfNotPresent
@@ -926,13 +926,13 @@ spec:
         value: all
   dcgm:
     enabled: false
-    repository: nvcr.io/nvidia/cloud-native # Fix this
+    repository: nvcr.io/nvidia/cloud-native
     image: dcgm
     version: "2.3.4-1-ubuntu20.04"
     imagePullPolicy: IfNotPresent
     hostPort: 5555
   dcgmExporter:
-    repository: nvcr.io/nvidia/k8s # Fix this
+    repository: nvcr.io/nvidia/k8s
     image: dcgm-exporter
     version: "2.3.4-2.6.4-ubuntu20.04"
     imagePullPolicy: IfNotPresent
@@ -944,7 +944,7 @@ spec:
       - name: DCGM_EXPORTER_COLLECTORS
         value: /etc/dcgm-exporter/dcp-metrics-included.csv
   gfd:
-    repository: nvcr.io/nvidia # Fix this
+    repository: nvcr.io/nvidia
     image: gpu-feature-discovery
     version: "v0.5.0"
     imagePullPolicy: IfNotPresent
@@ -955,7 +955,7 @@ spec:
         value: "true"
   migManager:
     enabled: true
-    repository: nvcr.io/nvidia/cloud-native # Fix this
+    repository: nvcr.io/nvidia/cloud-native
     image: k8s-mig-manager
     version: "v0.3.0-ubuntu20.04"
     imagePullPolicy: IfNotPresent
@@ -970,7 +970,7 @@ spec:
       name: ""
   nodeStatusExporter:
     enabled: false
-    repository: nvcr.io/nvidia/cloud-native # Fix this
+    repository: nvcr.io/nvidia/cloud-native
     image: gpu-operator-validator
     version: "v1.10.0"
     imagePullPolicy: IfNotPresent
